--- a/src/COMPONENTS/Sidebar.css
+++ b/src/COMPONENTS/Sidebar.css
@@ -61,7 +61,7 @@
 
 .menu-links:hover,
 .menu-links.active {
-    color: white;
+    color: black;
     text-decoration: underline 2px;
 }
 
@@ -74,7 +74,7 @@
     padding: 5px;
     cursor: pointer;
     display: none;
-}
+}       
 
 /* MEDIA QUERY */
 
@@ -82,13 +82,18 @@
 @media (max-width: 790px) {
     .nav-bar {
         display: flex;
+        justify-content: flex-start;
         align-items: center;
         padding: 10px;
-        justify-content: space-between;
+    }
+
+    .navLogo{
+        padding: 0px 10px;
     }
 
     .sidebaropen {
         display: block;
+        float: left;
     }
 
     .sidebarclose {
@@ -103,12 +108,12 @@
 
     .sidebarclose>.navLogo {
         font-size: 20px;
-        color: white;
         font-weight: bolder;
     }
 
     .nav-menu {
-        background-color: #060b26;
+        background-image: url(../Images/logo.jpg);
+        background-size: 100% 100%;
         width: 100vw;
         height: 100vh;
         display: flex;
@@ -148,7 +153,7 @@
 
     .menu-links:hover,
     .menu-links.active {
-        color: white;
+        color: black;
         text-decoration: underline 2px;
     }
 }
