--- a/src/COMPONENTS/Sidebar.css
+++ b/src/COMPONENTS/Sidebar.css
@@ -15,7 +15,7 @@
     display: flex;
 }
 
-.navLogo{
+.navLogo {
     font-size: 25px;
 }
 
@@ -40,15 +40,17 @@
     text-decoration: none;
     position: relative;
     font-size: 17px;
+    opacity: 0.6;
 }
 
+/* 
 .menu-links:visited{
     padding: 0px 10px;
     align-items: center;
     text-decoration: none;
     position: relative;
     font-size: 17px;
-}
+} */
 
 .nav-links .nav-li .menu-links::before {
     content: '';
@@ -65,6 +67,7 @@
 
 .menu-links:hover,
 .menu-links.active {
+    opacity: 1;
     color: black;
     text-decoration: underline 2px;
 }
@@ -78,9 +81,9 @@
     padding: 5px;
     cursor: pointer;
     display: none;
-}       
+}
 
-.btn-con{
+.btn-con {
     display: flex;
     justify-content: space-between;
 }
@@ -96,7 +99,7 @@
         padding: 10px;
     }
 
-    .navLogo{
+    .navLogo {
         padding: 0px 10px;
         font-size: 23px;
         align-content: center;
@@ -116,7 +119,7 @@
         align-items: center;
     }
 
-    .sidebarclose>.logo{
+    .sidebarclose>.logo {
         font-size: 23px;
         cursor: default;
     }
